--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -5,14 +5,15 @@
 }
 
 <!-- Products Start -->
-<div class="container-fluid pt-5">
-    <div class="text-center mb-4">
-        <h2 class="section-title px-5"><span class="px-2">Trendy Products</span></h2>
-        
-        <a asp-action="Create" class="btn btn-primary" style="float: right;">
-            <i class="fas fa-plus text-secondary mr-1"></i> Add New Product</a>
-        
+<div class="d-flex flex-wrap align-items-center justify-content-between mb-4">
+    <div class="flex-grow-1 text-center">
+        <h2 class="section-title"><span>All Products</span></h2>
     </div>
+    <a asp-action="Create" class="btn btn-primary ms-auto mt-3 mt-md-0">
+        <i class="fas fa-plus text-secondary me-1"></i> Add New Product
+    </a>
+</div>
+
     <div class="row px-xl-5 pb-3">
         @foreach (var item in Model)
         {
