--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -61,7 +61,7 @@ body {
   line-height: 1.5;
   color: #6F6F6F;
   text-align: left;
-  background-color: #fff;
+  background-color: #e8d1d1;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -9506,28 +9506,36 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .section-title {
-  position: relative;
-  display: inline-block;
-  letter-spacing: 1px;
-  font-weight: bold;
-  color: #1C1C1C;
+    font-size: 1.8rem;
+    font-weight: 700;
+    margin: 0;
+    display: inline-block;
+    position: relative;
+    line-height: 1;
 }
 
 .section-title span {
-  position: relative;
-  background: #ffffff;
-  z-index: 1;
+    display: inline-block;
+    padding: 0 1rem;
+    position: relative;
 }
 
-.section-title::before {
-  position: absolute;
-  content: "";
-  top: 50%;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  margin-top: -1px;
-  background: #1C1C1C;
+.section-title span::before,
+.section-title span::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    width: 60px;
+    background-color: #1C1C1C;
+    transform: translateY(-50%);
+}
+
+.section-title span::before {
+    left: -70px;
+}
+
+.section-title span::after {
+    right: -70px;
 }
 
 .offer img {
