--- a/Views/Product/Details.cshtml
+++ b/Views/Product/Details.cshtml
@@ -10,7 +10,7 @@
     <div class="container-fluid py-5">
         <div class="row px-xl-5">
             <div class="col-lg-5 pb-5">
-                <div id="product-carousel" class="carousel slide" data-ride="carousel">
+                <div>
                     <div class="carousel-inner border">
                         <div class="carousel-item active">
                             @if (!string.IsNullOrEmpty(Model.ImageUrl))
@@ -23,26 +23,35 @@
                             }
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#product-carousel" data-slide="prev">
-                        <i class="fa fa-2x fa-angle-left text-dark"></i>
-                    </a>
-                    <a class="carousel-control-next" href="#product-carousel" data-slide="next">
-                        <i class="fa fa-2x fa-angle-right text-dark"></i>
-                    </a>
                 </div>
             </div>
 
             <div class="col-lg-7 pb-5">
                 <h3 class="font-weight-semi-bold">@Html.DisplayFor(model => model.Name)</h3>
+                @{
+                    var reviewCount = Model.Reviews?.Count() ?? 0;
+                    var avgRating = reviewCount > 0 ? Model.Reviews.Average(r => r.Rating) : 0;
+                }
+
                 <div class="d-flex mb-3">
-                    <div class="text-primary mr-2">
-                        <small class="fas fa-star"></small>
-                        <small class="fas fa-star"></small>
-                        <small class="fas fa-star"></small>
-                        <small class="fas fa-star-half-alt"></small>
-                        <small class="far fa-star"></small>
+                    <div class="text-primary me-2">
+                        @for (int i = 1; i <= 5; i++)
+                        {
+                            if (i <= Math.Floor(avgRating))
+                            {
+                                <small class="fas fa-star"></small>
+                            }
+                            else if (i - avgRating < 1)
+                            {
+                                <small class="fas fa-star-half-alt"></small>
+                            }
+                            else
+                            {
+                                <small class="far fa-star"></small>
+                            }
+                        }
                     </div>
-                    <small class="pt-1">(50 Reviews)</small>
+                    <small class="pt-1">(@reviewCount Review@(reviewCount != 1 ? "s" : ""))</small>
                 </div>
                 <h3 class="font-weight-semi-bold mb-4">@Html.DisplayFor(model => model.Price)</h3>
                 <p class="mb-4">@Html.DisplayFor(model => model.Description)</p>                
@@ -82,9 +91,11 @@
         </div>
         <div class="row px-xl-5">
             <div class="col">
-                <div class="nav nav-tabs justify-content-center border-secondary mb-4">
-                    <a class="nav-item nav-link active" data-toggle="tab" href="#tab-pane-1">Description</a>
-                    <a class="nav-item nav-link" data-toggle="tab" href="#tab-pane-3">Reviews (0)</a>
+                <div class="nav nav-tabs justify-content-center border-secondary mb-4" role="tablist">
+                    <a class="nav-item nav-link active" data-toggle="tab" href="#tab-pane-1" role="tab">Description</a>
+                    <a class="nav-item nav-link" data-toggle="tab" href="#tab-pane-3" role="tab">
+                        Reviews (@Model.Reviews?.Count())
+                    </a>
                 </div>
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="tab-pane-1">
@@ -94,52 +105,40 @@
                     <div class="tab-pane fade" id="tab-pane-3">
                         <div class="row">
                             <div class="col-md-6">
-                                <h4 class="mb-4">1 review for "Colorful Stylish Shirt"</h4>
-                                <div class="media mb-4">
-                                    <img src="img/user.jpg" alt="Image" class="img-fluid mr-3 mt-1" style="width: 45px;">
-                                    <div class="media-body">
-                                        <h6>John Doe<small> - <i>01 Jan 2045</i></small></h6>
-                                        <div class="text-primary mb-2">
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star"></i>
-                                            <i class="fas fa-star-half-alt"></i>
-                                            <i class="far fa-star"></i>
+                            <h4 class="mb-4">
+                                @Model.Reviews?.Count()
+                                review for "Colorful Stylish Shirt"
+                            </h4>
+                                @foreach (var review in Model.Reviews.OrderByDescending(r => r.ReviewDate))
+                                {
+                                    <div class="media mb-4">
+                                        <img src="~/img/user.png" alt="User Image" class="img-fluid me-3 mt-1 rounded-circle" style="width: 45px;">
+                                        <div class="media-body">
+                                            <h6>
+                                                @review.ReviewerName
+                                                <small class="text-muted"> - <i>@review.ReviewDate.ToString("dd MMM yyyy")</i></small>
+                                            </h6>
+                                            <div class="text-primary mb-2">
+                                                @for (int i = 1; i <= 5; i++)
+                                                {
+                                                    if (i <= Math.Floor(review.Rating))
+                                                    {
+                                                        <i class="fas fa-star"></i>
+                                                    }
+                                                    else if (i - review.Rating < 1)
+                                                    {
+                                                        <i class="fas fa-star-half-alt"></i>
+                                                    }
+                                                    else
+                                                    {
+                                                        <i class="far fa-star"></i>
+                                                    }
+                                                }
+                                            </div>
+                                            <p>@review.Message</p>
                                         </div>
-                                        <p>Diam amet duo labore stet elitr ea clita ipsum, tempor labore accusam ipsum et no at. Kasd diam tempor rebum magna dolores sed sed eirmod ipsum.</p>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <h4 class="mb-4">Leave a review</h4>
-                                <small>Your email address will not be published. Required fields are marked *</small>
-                                <div class="d-flex my-3">
-                                    <p class="mb-0 mr-2">Your Rating * :</p>
-                                    <div class="text-primary">
-                                        <i class="far fa-star"></i>
-                                        <i class="far fa-star"></i>
-                                        <i class="far fa-star"></i>
-                                        <i class="far fa-star"></i>
-                                        <i class="far fa-star"></i>
-                                    </div>
-                                </div>
-                                <form>
-                                    <div class="form-group">
-                                        <label for="message">Your Review *</label>
-                                        <textarea id="message" cols="30" rows="5" class="form-control"></textarea>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="name">Your Name *</label>
-                                        <input type="text" class="form-control" id="name">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="email">Your Email *</label>
-                                        <input type="email" class="form-control" id="email">
-                                    </div>
-                                    <div class="form-group mb-0">
-                                        <input type="submit" value="Leave Your Review" class="btn btn-primary px-3">
-                                    </div>
-                                </form>
+                                }
                             </div>
                         </div>
                     </div>
