--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -34,16 +34,36 @@
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
 
+                   <!-- Sizes -->
                     <div class="form-group">
-                        <label asp-for="AvailableSizes" class="control-label">Avaliable Sizes</label>
-                        <input asp-for="AvailableSizes" class="form-control" placeholder="Comma-separated: S,M,L" />
-                        <span asp-validation-for="AvailableSizes" class="text-danger"></span>
+                        <label class="control-label">Available Sizes</label>
+                        @if (ViewBag.AllSizes != null)
+                        {
+                            foreach (var size in ViewBag.AllSizes)
+                            {
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="checkbox" name="SelectedSizes" value="@size"
+                                        @(Model?.AvailableSizes != null && Model.AvailableSizes.Contains(size) ? "checked" : "") />
+                                    <label class="form-check-label">@size</label>
+                                </div>
+                            }
+                        }
                     </div>
 
+                    <!-- Colors -->
                     <div class="form-group">
-                        <label asp-for="AvailableColors" class="control-label">Available Colors</label>
-                        <input asp-for="AvailableColors" class="form-control" placeholder="Comma-separated: Red,Blue,Black" />
-                        <span asp-validation-for="AvailableColors" class="text-danger"></span>
+                        <label class="control-label">Available Colors</label>
+                        @if (ViewBag.AllColors != null)
+                        {
+                            foreach (var color in ViewBag.AllColors)
+                            {
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="checkbox" name="SelectedColors" value="@color"
+                                        @(Model?.AvailableColors != null && Model.AvailableColors.Contains(color) ? "checked" : "") />
+                                    <label class="form-check-label">@color</label>
+                                </div>
+                            }
+                        }
                     </div>
 
                     <div class="form-group">
@@ -54,7 +74,7 @@
 
                     <div class="form-group">
                         <label asp-for="Rating" class="control-label"></label>
-                        <input asp-for="Rating" class="form-control" />
+                        <input asp-for="Rating" class="form-control" value="0" />
                         <span asp-validation-for="Rating" class="text-danger"></span>
                     </div>
 
