--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="row px-xl-5">
         <div class="row">
-            <form asp-action="Create" enctype="multipart/form-data" class="row w-100">
+            <form asp-action="Edit" enctype="multipart/form-data" class="row w-100">
 
                 <!-- Left: Form fields -->
                 <div class="col-lg-7 mb-5">
@@ -38,14 +38,30 @@
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
 
+                    <!-- Sizes -->
                     <div class="form-group">
-                        <label class="control-label">Available Sizes (comma-separated)</label>
-                        <input type="text" name="AvailableSizesCsv" class="form-control" value="@sizes" />
+                        <label class="control-label">Available Sizes</label>
+                        @foreach (var size in (string[])ViewBag.AllSizes)
+                        {
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" name="SelectedSizes" value="@size"
+                                    @(Model.AvailableSizes != null && Model.AvailableSizes.Contains(size) ? "checked" : "") />
+                                <label class="form-check-label">@size</label>
+                            </div>
+                        }
                     </div>
 
+                    <!-- Colors -->
                     <div class="form-group">
-                        <label class="control-label">Available Colors (comma-separated)</label>
-                        <input type="text" name="AvailableColorsCsv" class="form-control" value="@colors" />
+                        <label class="control-label">Available Colors</label>
+                        @foreach (var color in (string[])ViewBag.AllColors)
+                        {
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" name="SelectedColors" value="@color"
+                                    @(Model.AvailableColors != null && Model.AvailableColors.Contains(color) ? "checked" : "") />
+                                <label class="form-check-label">@color</label>
+                            </div>
+                        }
                     </div>
 
                     <div class="form-group">
