--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -72,7 +72,7 @@
                         <span asp-validation-for="StockQuantity" class="text-danger"></span>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group" style="display:none;">
                         <label asp-for="Rating" class="control-label"></label>
                         <input asp-for="Rating" class="form-control" value="0" />
                         <span asp-validation-for="Rating" class="text-danger"></span>
